# Concurrency-Simulator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  metrics.cpp  metrics.h  monitor.cpp  monitor.h  philosophers.cpp  philosophers.h  producer_consumer.cpp  producer_consumer.h  reader_writer.cpp  reader_writer.h  ui.cpp  ui.h  workstealing.cpp  workstealing.h
web/: app.py
web/static/: index.html
